--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="WpfGraphicsApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        Focusable="True"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         Title="Graphics App" Height="750" Width="1000"
         WindowStartupLocation="CenterScreen">
@@ -77,23 +78,23 @@
         <Border Grid.Row="1" Margin="10,0,10,10" Background="Lavender" BorderBrush="#B9A1EA" BorderThickness="2" CornerRadius="5" Padding="0,8">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Left" VerticalAlignment="Center">
                 <!-- Кнопки с применённым стилем -->
-                <Button Content="Polygon" Click="DrawPolygon_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
-                <Button Content="Square" Click="DrawSquare_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
-                <Button Content="Rectangle" Click="DrawRectangle_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
-                <Button Content="Ellipse" Click="DrawEllipse_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
-                <Button Content="Line" Click="DrawLine_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
-                <Button Content="Polyline" Click="DrawPolyline_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
+                <Button Content="Polygon" Click="SelectPolygonTool_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
+                <!-- <Button Content="Square" Click="DrawSquare_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/> -->
+                <Button Content="Rectangle" Click="SelectRectangleTool_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
+                <Button Content="Ellipse" Click="SelectEllipseTool_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
+                <Button Content="Line" Click="SelectLineTool_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
+                <Button Content="Polyline" Click="SelectPolylineTool_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
                 
                 <!-- Регулировка толщины линии -->
                 <StackPanel Orientation="Vertical" Margin="2,0">
                     <Label Content="Line thickness:" HorizontalAlignment="Center"/>
-                    <Slider x:Name="ThicknessSlider" Minimum="1" Maximum="20" Value="2" Width="100" Margin="3"/>
+                    <Slider x:Name="ThicknessSlider" Minimum="1" Maximum="20" Value="2" Width="100" Margin="10,0,0,0" 
+                            ValueChanged="ThicknessSlider_ValueChanged"/>
                 </StackPanel>
 
                 <!-- Выбор цвета -->
-                <Button Content="Colour" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
-                
-                <Button Content="Filling" Click="DrawPolyline_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
+                <Button Content="Stroke Color" Click="SelectStrokeColor_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
+                <Button Content="Fill Color" Click="SelectFillColor_Click" Margin="4" Style="{StaticResource RoundedButtonStyle}"/>
             </StackPanel>
         </Border>
 
